fixed text squashing
text squashing in accordion subtext fixed by changing js to modify
marginRight rather than width

--- a/css/main.css
+++ b/css/main.css
@@ -175,8 +175,9 @@ ul li {
         display: none;
     }
 
-    .myhbSidenav    {
-
+    #myhbSidenav    {
+        width: 80%;
+        margin-right: -80%;
     }
 
     .hbsidenav {
@@ -194,22 +195,23 @@ ul li {
     }
 
     .hbsidenav a {
-        padding: 5px 30px;
+        padding: 5px 0;
         text-decoration: none;
         font-size: 25px;
         color: #eee;
         display: block;
-        transition: 0.3s
+        transition: 0.2s
         opacity: 1;
+        text-align: center;
     }
 
     .hbsidenav a:hover, .offcanvas a:focus{
         color: #c7840c;
     }
 
-    .hbsidenav .hbclosebtn  {
+    .hbclosebtn  {      /*.hbsidenav - (in case anything fucks up without this)*/
         position: absolute;
-        top: 0;
+        top: 0;     /*this is what's messing with the closebutton's visibility for some stupid reason*/
         right: 10px;
         font-size: 36px;
         padding: 5px 20px;
@@ -245,6 +247,7 @@ ul li {
         font-size: 15px;
         transition: 0.2s;
         opacity: 1;
+        
     }
 
     .accordion.active, .accordion:hover {
@@ -269,6 +272,7 @@ ul li {
 
     .pplink {
         transition: 0.2s;
+
     }
 
     .pplink a   {
@@ -470,7 +474,7 @@ li.follow    {
 
 @media all and (max-width: 700px) {
     header    {
-        /*position: fixed;*/
+        position: fixed;
     }
     .topNavClass    {
         display: none;
@@ -479,14 +483,14 @@ li.follow    {
         display: inline-block;
     }
     #wallpaper    {
-        /*margin-top: 60px;*/
+        margin-top: 60px;
     }
     
 }
 
 @media all and (max-width: 480px) {
     footer  {        
-        height: 110px
+        height: 80px
     }
     .footerList   {
         width: 33.33%;
@@ -502,5 +506,15 @@ li.follow    {
     }
     .mobBr    {
         display: block;
+    }
+    .hbsidenav a   {
+        text-align: left;
+        padding-left: 20px
+    }
+}
+
+@media all and (max-width: 320px) {
+    footer  {        
+        height: 110px
     }
 }
